# monsys

./: .gitignore  README.md  build.sh
backend/: CMakeLists.txt  CMakePresets.json  vcpkg.json
backend/include/: Calculators.hpp  Models.hpp  StatCollector.hpp
backend/include/readers/: CpuStatReader.hpp  DiskStatReader.hpp  MemoryStatReader.hpp  NetworkStatReader.hpp  ProcessStatReader.hpp
backend/include/server/: WebsocketManager.hpp  routes.hpp
backend/src/: Calculators.cpp  StatCollector.cpp  main.cpp
backend/src/readers/: CpuStatReader.cpp  DiskStatReader.cpp  MemoryStatReader.cpp  NetworkStatReader.cpp  ProcessStatReader.cpp
backend/src/server/: WebsocketManager.cpp  routes.cpp
backend/static/: app.js  index.html
frontend/: index.html
frontend/src/: main.ts  metrics.ts  style.css  table.ts  types.ts  ws.ts
